fix backgound on mobile

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -817,7 +817,7 @@ body {
     }
     .welcome {
         height: 100%;
-        padding: 150px 0 200px 0;
+        padding: 120px 0 200px 0;
         &__content {
             // padding: 150px 0 0 0;
             flex-direction: column-reverse;
@@ -873,7 +873,7 @@ body {
         width: 190%;
         left: -20%;
         &_top {
-            height: 1400px;
+            height: 1350px;
         }
     }
     .features__content {
@@ -1019,6 +1019,9 @@ body {
     }
 }
 @media (max-width: 600px) {
+    .welcome {
+        padding-bottom: 100px;
+    }
     .profile__signup {
         display: none;
     }
@@ -1032,6 +1035,6 @@ body {
         font-size: 14px;
     }
     .content__background_top {
-        height: 1100px;
+        height: 1050px;
     }
 }
